Add styles for Attendance, FormInscription, ManageHonors, and ManagePoints components
- Created Attendance.css with styles for attendance page layout, navigation, and participant status.
- Added FormInscription.css for form layout, validation states, and responsive design.
- Implemented ManageHonors.css for managing honors with group and participant styles.
- Developed ManagePoints.css for points management, including controls and responsive adjustments.

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -601,5 +601,26 @@
 		"error_linking_participants": "Error occurred while linking participants",
 		"no_participants_selected": "No participants selected",
 		"new_animator_registration_subject": "New Animator Registration for {orgName}",
-		"new_animator_registration_body": "\n  Dear Admin,\n\n  A new user has registered as an animator for {orgName} and requires verification:\n\n  Name: {animatorName}\n  Email: {animatorEmail}\n\n  Please log in to the admin dashboard to verify this user.\n\n  Best regards,\n  The System\n  "
+		"new_animator_registration_body": "\n  Dear Admin,\n\n  A new user has registered as an animator for {orgName} and requires verification:\n\n  Name: {animatorName}\n  Email: {animatorEmail}\n\n  Please log in to the admin dashboard to verify this user.\n\n  Best regards,\n  The System\n  ",
+		"error_loading_data": "Error loading data",
+		"error_loading_dashboard": "Error loading dashboard data",
+		"feuille_participants": "Participants Sheet",
+		"administration": "Administration",
+		"no_groups_found": "No groups found",
+		"error_updating_points": "Error updating points",
+		"error_awarding_honors": "Error awarding honors",
+		"error_adding_guest": "Error adding guest",
+		"error_sending_notification": "Error sending notification",
+		"error_saving_participant": "Error saving participant",
+		"points_updated_successfully": "Points updated successfully",
+		"honors_awarded_successfully": "Honors awarded successfully",
+		"select_participant_or_group": "Select a participant or group",
+		"no_participants_selected": "No participants selected",
+		"participants_selected": "participants selected",
+		"eligible": "eligible",
+		"no_participants_today": "No participants for today",
+		"no_honors_on_date": "No honors on this date",
+		"award_honors": "Award Honors",
+		"participant_updated_successfully": "Participant updated successfully",
+		"participant_created_successfully": "Participant created successfully"
 }
