--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -646,5 +646,26 @@
 		"group_attendance_updated": "La présence du groupe a été mise à jour.",
 		"error_updating_group_attendance": "Erreur lors de la mise à jour de la présence du groupe.",
 		"no_participants_to_update": "Aucun participant à mettre à jour.",
-		"no_selection": "Aucune sélection."
+		"no_selection": "Aucune sélection.",
+		"error_loading_data": "Erreur lors du chargement des données",
+		"error_loading_dashboard": "Erreur lors du chargement du tableau de bord",
+		"feuille_participants": "Feuille des participants",
+		"administration": "Administration",
+		"no_groups_found": "Aucun groupe trouvé",
+		"error_updating_points": "Erreur lors de la mise à jour des points",
+		"error_awarding_honors": "Erreur lors de l'attribution des honneurs",
+		"error_adding_guest": "Erreur lors de l'ajout de l'invité",
+		"error_sending_notification": "Erreur lors de l'envoi de la notification",
+		"error_saving_participant": "Erreur lors de l'enregistrement du participant",
+		"points_updated_successfully": "Points mis à jour avec succès",
+		"honors_awarded_successfully": "Honneurs attribués avec succès",
+		"select_participant_or_group": "Sélectionnez un participant ou un groupe",
+		"no_participants_selected": "Aucun participant sélectionné",
+		"participants_selected": "participants sélectionnés",
+		"eligible": "éligible",
+		"no_participants_today": "Aucun participant pour aujourd'hui",
+		"no_honors_on_date": "Aucun honneur à cette date",
+		"award_honors": "Attribuer les honneurs",
+		"participant_updated_successfully": "Participant mis à jour avec succès",
+		"participant_created_successfully": "Participant créé avec succès"
 }
